manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: starter-pack
  labels:
    pod-security.kubernetes.io/enforce: restricted
