manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-app-service
  namespace: ${namespace}
spec:
  type: ClusterIP
  selector:
    app: test-app
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
