manifests/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: starter-pack-route
  namespace: starter-pack
spec:
  parentRefs:
    - name: ${gateway_name}
      namespace: ${gateway_namespace}
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: hello-world-service
          port: 8080
          weight: 1
